resources/css/app.css
/* ... */
.theme-switch label:after {
    content: '';
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 5%;
    width: 41%;
    aspect-ratio: 1/1;
    background-color: oklch(0.985 0 0);
    /* border: 2px dotted oklch(0.145 0 0); */
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='oklch(0.145 0 0)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-sun'%3E%3Ccircle cx='12' cy='12' r='4'/%3E%3Cpath d='M12 2v2'/%3E%3Cpath d='M12 20v2'/%3E%3Cpath d='m4.93 4.93 1.41 1.41'/%3E%3Cpath d='m17.66 17.66 1.41 1.41'/%3E%3Cpath d='M2 12h2'/%3E%3Cpath d='M20 12h2'/%3E%3Cpath d='m6.34 17.66-1.41 1.41'/%3E%3Cpath d='m19.07 4.93-1.41 1.41'/%3E%3C/svg%3E");
    background-repeat: no-repeat;
    background-position: center;
    background-size: 80%;
    border-radius: 90px;
    transition: 0.3s;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
}

.dark .theme-switch label:after {
    background-color: oklch(0.145 0 0);
    border-color: oklch(0.985 0 0);
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='oklch(0.985 0 0)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-moon'%3E%3Cpath d='M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401'/%3E%3C/svg%3E");
}
/* @media screen and (min-width: 1024px) { */
/*     .theme-switch label:after { */
/*         border-color: oklch(0.985 0 0); */
/*     } */
/* } */

.theme-switch input:checked + label {
    background: transparent;
}

.theme-switch input:checked + label:after {
    left: 95%;
    transform: translate(-100%, -50%);
}

.theme-switch label:active:after {
    width: 55%;
}

.slide-in {
    --slide-delay: 100ms;
    animation-name: slide-in;
    animation-duration: 600ms;
    animation-delay: var(--slide-delay);
    animation-timing-function: linear(
        0,
        0.012 0.9%,
        0.05 2%,
        0.411 9.2%,
        0.517 11.8%,
        0.611 14.6%,
        0.694 17.7%,
        0.765 21.1%,
        0.824 24.8%,
        0.872 28.9%,
        0.91 33.4%,
        0.939 38.4%,
        0.977 50.9%,
        0.994 68.4%,
        1
    );
    animation-fill-mode: forwards;
    opacity: 0;
}

@keyframes slide-in {
    0% {
        opacity: 0;
        transform: translateX(200%);
    }
    100% {
        opacity: 1;
        transform: translateX(0%);
    }
}

.review-slide {
    --offset: 1.25rem;
    width: min(60rem, calc(100vw - (var(--offset) * 2)));
}

@media screen and (min-width: 640px) {
    .review-slide {
        --offset: 1.25rem;
    }
}
@media screen and (min-width: 1024px) {
    .review-slide {
        --offset: 3.25rem;
    }

    .slide-in {
        opacity: 100;
    }
}

.skeleton {
    @apply animate-pulse bg-gray-300 text-transparent;
}

@media (not (prefers-reduced-motion: reduce)) {
    .faq-animation {
        animation: faqs calc(var(--offsetY) * 400ms) ease-in-out forwards;
    }
}

@keyframes faqs {
    0% {
        transform: translate(
            calc(var(--offsetX) * -50%),
            calc(var(--offsetY) * -100%)
        );
        opacity: 0;
    }
    100% {
        transform: translate(0%, 0%);
        opacity: 100;
    }
}

.shine-element {
    position: absolute;
    top: 0;
    left: -75%;
    z-index: 2;
    display: block;
    content: '';
    width: 50%;
    height: 100%;
    background: -webkit-linear-gradient(
        left,
        rgba(255, 255, 255, 0) 0%,
        rgba(255, 255, 255, 0.3) 100%
    );
    background: linear-gradient(
        to right,
        rgba(255, 255, 255, 0) 0%,
        rgba(255, 255, 255, 0.3) 100%
    );
    -webkit-transform: skewX(-25deg);
    transform: skewX(-25deg);
}

@-webkit-keyframes shine {
    100% {
        left: 125%;
    }
}

@keyframes shine {
    100% {
        left: 125%;
    }
}

.stack-content-closed {
    transition:
        max-height 750ms cubic-bezier(0.66, 0, 0.34, 1),
        padding 300ms 500ms ease-in,
        margin 300ms 500ms ease-in;
}
.stack-content-open {
    transition:
        max-height 750ms cubic-bezier(0.66, 0, 0.34, 1),
        padding 300ms ease-in,
        margin 300ms ease-in;
}

.slide-up-1 {
    animation: slide-up-1 0.5s ease-out 4.5s;
}
@keyframes slide-up-1 {
    100% {
        transform: translateY(-125%);
    }
}
.slide-up-2 {
    animation: slide-up-2 0.5s ease-out 4.5s;
}
@keyframes slide-up-2 {
    100% {
        transform: translateY(-125%);
    }
}

.ellipsis-multiline {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 7;
    overflow: hidden;
}

.content-vis-auto {
    content-visibility: auto;
}

.full-bleed-wrapper {
    --padding: 1.125rem;
    display: grid;
    grid-template-columns:
        1fr
        calc(100% - (var(--padding) * 2))
        1fr;

    @media screen and (min-width: 40rem) {
        --padding: 3.5rem;
    }
    @media screen and (min-width: 80rem) {
        --padding: 6.5rem;
    }
    @media screen and (min-width: 96rem) {
        --padding: 11.5rem;
    }
}

.full-bleed-wrapper > * {
    grid-column: 2;
}

.full-bleed {
    width: 100%;
    grid-column: 1 / 4;
}

.full-bleed-padding > *:not(.full-bleed) {
    margin-inline: var(--padding);
}

